@@ -1,4 +1,4 @@
-/* $Id: tiff2pdf.c,v 1.50 2009-01-22 21:12:45 fwarmerdam Exp $
+/* $Id: tiff2pdf.c,v 1.51 2010-02-22 19:10:07 faxguy Exp $
  *
  * tiff2pdf - converts a TIFF image to a PDF document
  *
@@ -3324,6 +3324,9 @@ int t2p_process_jpeg_strip(
 	while(i<(*striplength)){
 		switch( strip[i] ){
 			case 0xd8:
+				/* SOI - start of image */
+				_TIFFmemcpy(&(buffer[*bufferoffset]), &(strip[i-1]), 2);
+				*bufferoffset+=2;
 				i+=2;
 				break;
 			case 0xc0:
