@@ -1,3 +1,13 @@
+2010-02-22  Lee Howard  <faxguy@howardsilvan.com>
+
+	* libtiff/tif_jpeg.c: Do not generate a JPEGTables tag when creating
+	the JPEG TIFF as is is not required in order to prevent it from 
+	being unused and filled with invalid data.  (Leave it to be 
+	generated by later activity.)
+	* tools/tiff2pdf.c: Write the JPEG SOI headers into the TIFF strip 
+	data rather than skipping them.  This fixes the ability to view in
+	Acrobat Reader, Evince, and Ghostscript.
+
 2009-12-03  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* libtiff/tif_jpeg.c: Made JPEGDecodeRaw() check for buffer overruns.
